修改学生管理

--- a/wisdomCampus/html/studentManage/student-action.html
+++ b/wisdomCampus/html/studentManage/student-action.html
@@ -293,6 +293,12 @@
 			}
 
 			mui.plusReady(function() {
+				//获取筛选的人员信息
+				getStudnets();
+			});
+			
+			//获取筛选的人员信息
+			var getStudnets = function() {
 				studentMP.getStudentManagePermission(1, 1, function(array) {
 					console.log("ABCD==" + JSON.stringify(array))
 					selectTitle.list = array;
@@ -308,7 +314,7 @@
 						getAttendanceList(pageIndex);
 					}
 				});
-			});
+			}
 			//接收student-index发送的close事件
 			window.addEventListener('closePop', function() {
 				$("#bottomPopover").hide();
@@ -334,11 +340,15 @@
 				down: {
 					callback: function() {
 						var self = this;
-						pageIndex = 1;
-						flagRef = 0;
-						getAttendanceList(pageIndex, this);
-						//结束下拉刷新
-						//							self.endPullDownToRefresh();
+						if(selectTitle.list.length>0) {
+							pageIndex = 1;
+							flagRef = 0;
+							getAttendanceList(pageIndex, this);
+						} else {
+							self.endPullDownToRefresh();
+							//获取筛选的人员信息
+							getStudnets();
+						}
 					}
 				},
 				up: {
