--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -177,7 +177,7 @@
 					</li>
 					<li class="mui-table-view-cell">
 						<a class="aCss">考勤说明</a>
-						<textarea id="notes" maxlength="120" v-model="content" placeholder="请输入考勤说明（最多120个字）"></textarea>
+						<textarea id="notes" onfocus="showHidDTPicker()" maxlength="120" v-model="content" placeholder="请输入考勤说明（最多120个字）"></textarea>
 					</li>
 				</ul>
 				<div style="background-color: #f2f3f5;height: 10px;"></div>
