--- a/wisdomCampus/html/studentManage/student-comment-Detail.html
+++ b/wisdomCampus/html/studentManage/student-comment-Detail.html
@@ -519,7 +519,7 @@
 						//获取学期列表
 						getSysTerm();
 					} else {
-						//							mui.toast(data.RspTxt);
+						mui.toast(data.RspTxt);
 					}
 				});
 				mui('.mui-scroll-wrapper').scroll();
