--- a/wisdomCampus/html/studentManage/student-comment.html
+++ b/wisdomCampus/html/studentManage/student-comment.html
@@ -130,6 +130,12 @@
 			var userPicker, userPickerType;
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			mui.plusReady(function() {
+				//获取筛选的人员信息
+				getStudnets();
+			});
+
+			//获取筛选的人员信息
+			var getStudnets = function() {
 				studentMP.getStudentManagePermission(1, 2, function(array) {
 					console.log("ABCD==" + JSON.stringify(array))
 					selectTitle.list = array;
@@ -150,7 +156,7 @@
 						getCommentList(pageIndex);
 					}
 				});
-			});
+			}
 
 			var actionArrayData = new Vue({
 				el: "#actionArrayData",
@@ -278,13 +284,15 @@
 				down: {
 					callback: function() {
 						var self = this;
-						pageIndex = 1;
-						flagRef = 0;
-						getCommentList(pageIndex, this);
-						//						setTimeout(function() {
-						//							//结束下拉刷新
-						//							self.endPullDownToRefresh();
-						//						}, 1000);
+						if(selectTitle.list.length > 0) {
+							pageIndex = 1;
+							flagRef = 0;
+							getCommentList(pageIndex, this);
+						} else {
+							self.endPullDownToRefresh();
+							//获取筛选的人员信息
+							getStudnets();
+						}
 					}
 				},
 				up: {
