--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -178,6 +178,12 @@
 				layer: 1
 			});
 			mui.plusReady(function() {
+				//获取筛选的人员信息
+				getStudnets();
+			});
+
+			//获取筛选的人员信息
+			var getStudnets = function() {
 				studentMP.getStudentManagePermission(1, 2, function(array) {
 					console.log("ABCD==" + JSON.stringify(array))
 					selectTitle.list = array;
@@ -189,7 +195,7 @@
 						getReviewList(pageIndex);
 					}
 				});
-			});
+			}
 			//接收student-index发送的close事件
 			window.addEventListener('closePop', function() {
 				$("#bottomPopover").hide();
@@ -293,12 +299,15 @@
 				down: {
 					callback: function() {
 						var self = this;
-						pageIndex = 1;
-						flagRef = 0;
-						getReviewList(pageIndex, this);
-						//						setTimeout(function() {
-						//							self.endPullDownToRefresh();
-						//						}, 1000);
+						if(selectTitle.list.length > 0) {
+							pageIndex = 1;
+							flagRef = 0;
+							getReviewList(pageIndex, this);
+						} else {
+							self.endPullDownToRefresh();
+							//获取筛选的人员信息
+							getStudnets();
+						}
 					}
 				},
 				up: {
