--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -116,7 +116,10 @@
 			}
 			
 			.mui-table-view-cell>a:not(.mui-btn).mui-active {
-				background-color: #fff;
+				background-color: transparent;
+			}
+			.mui-table-view-cell.mui-active {
+				background-color: transparent;
 			}
 			
 			.mui-table-view.bottom-line:after {
