--- a/wisdomCampus/html/studentManage/student-attendanceDetail.html
+++ b/wisdomCampus/html/studentManage/student-attendanceDetail.html
@@ -79,12 +79,16 @@
 				display: none;
 			}
 			
+			.mui-table-view-cell.mui-active {
+				background-color: transparent;
+			}
+			
 			.mui-checkbox input[type=checkbox]:checked:before {
 				color: #63BBFF;
 			}
 			
 			.mui-table-view-cell>a:not(.mui-btn).mui-active {
-				background-color: #fff;
+				background-color: transparent;
 			}
 		</style>
 	</head>
