--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -185,6 +185,9 @@
 			}
 			/**add*/
 			
+			.mui-table-view-cell>a:not(.mui-btn).mui-active {
+				background-color: transparent;
+			}
 			.mui-table-view-cell.mui-active {
 				background-color: transparent;
 			}
