--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -750,6 +750,13 @@
 							if(nodes.attendanceTime == "请选择") {
 								mui.toast('请先选择考勤日期');
 								mui(id).popover('toggle');
+								//重置节次为可选状态
+								nodes.classCanCheck = 1;
+								nodes.dayCanCheck = 1;
+    							nodes.halfDayCanCheck = 1;
+								nodes.classNames='请选择';
+								nodes.classNodes = [];
+								nodes.kmShow=1;
 								return 0;
 							}
 
