--- a/wisdomCampus/html/studentManage/student-index.html
+++ b/wisdomCampus/html/studentManage/student-index.html
@@ -88,11 +88,11 @@
 				<span id="flag2" class="mui-tab-label">谈话记录</span>
 			</a>
 			<a v-show='showPage==1' class="mui-tab-item" href="../../html/studentManage/student-review.html">
-				<span class="mui-icon iconfont icon-score"></span>
+				<span class="mui-icon iconfont icon-kaoping"></span>
 				<span id="flag3" class="mui-tab-label">量化考评</span>
 			</a>
 			<a v-show='showPage==1' class="mui-tab-item" href="../../html/studentManage/student-comment.html">
-				<span class="mui-icon iconfont icon-xiepingyu"></span>
+				<span class="mui-icon iconfont icon-xiaozhushouzhijianpingyuweihu"></span>
 				<span id="flag4" class="mui-tab-label">评语</span>
 			</a>
 		</nav>
