--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -914,7 +914,7 @@
 				}
 
 				console.log('tempData:' + JSON.stringify(tempData));
-				var wd = events.showWaiting();
+//				var wd = events.showWaiting();
 				getActionSaveBehavior(tempData, function(data) {
 					wd.close();
 					console.log('8.保存行为信息 ' + JSON.stringify(data));
