--- a/wisdomCampus/html/studentManage/student-reviewStudent.html
+++ b/wisdomCampus/html/studentManage/student-reviewStudent.html
@@ -163,7 +163,7 @@
 						yAxis: [{
 							type: 'value', //坐标轴类型，纵轴默认为数值型'value'
 							name: '分数',
-							min: 0,
+//							min: -100,
 							minInterval: 1,
 							nameLocation: 'middle',
 							nameTextStyle: {
