--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -111,7 +111,7 @@
 								<a class="mui-slider-handle" href="javascript:;" @tap="gotoDeatil(actionModel,index)">
 									<template v-if="actionModel.type=='周评'">
 										<div class="mui-media-body">
-											<span class="leftTag-title" style="background: #FF6AC8;font-size: 12px;">{{actionModel.type}}</span><span class="leftTag" style="font-size: 14px;color: #333;">{{actionModel.gradeName}}{{actionModel.className}}{{actionModel.year}}年{{actionModel.week}}学生行为量化考评</span>
+											<span class="leftTag-title" style="background: #FF6AC8;font-size: 12px;">{{actionModel.type}}</span><span class="leftTag" style="font-size: 14px;color: #333;">{{actionModel.gradeName}}{{actionModel.className}}{{actionModel.year}}年{{actionModel.termname}}{{actionModel.week}}学生行为量化考评</span>
 											<br/>
 											<span class='mui-ellipsis' style="font-size: 12px;color: #999;">量化时间：{{actionModel.fromDate}}——{{actionModel.toDate}}</span>
 											<span class='rightTag-title' style="font-size: 12px;color: #333;">{{actionModel.createUsername}}</span>
@@ -119,7 +119,7 @@
 									</template>
 									<template v-if="actionModel.type=='月评'">
 										<div class="mui-media-body">
-											<span class="leftTag-title" style="background: #48C6C3;font-size: 12px;">{{actionModel.type}}</span><span class="leftTag" style="font-size: 14px;color: #333;">{{actionModel.gradeName}}{{actionModel.className}}{{actionModel.year}}年{{actionModel.month}}月学生行为量化考评</span>
+											<span class="leftTag-title" style="background: #48C6C3;font-size: 12px;">{{actionModel.type}}</span><span class="leftTag" style="font-size: 14px;color: #333;">{{actionModel.gradeName}}{{actionModel.className}}{{actionModel.year}}年{{actionModel.termname}}{{actionModel.month}}月学生行为量化考评</span>
 											<br/>
 											<span class='mui-ellipsis' style="font-size: 12px;color: #999;">量化时间：{{actionModel.fromDate}}——{{actionModel.toDate}}</span>
 											<span class='rightTag-title' style="font-size: 12px;color: #333;">{{actionModel.createUsername}}</span>
