--- a/wisdomCampus/html/index/login.html
+++ b/wisdomCampus/html/index/login.html
@@ -38,6 +38,7 @@
 			</div>
 		</div>
 	</body>
+
 	<script src='../../js/lib/vconsole/vconsole.min.js'></script>
 	<script src='../../js/lib/jquery.js'></script>
 	<script src="../../js/utils/myStorage.js"></script>
@@ -45,6 +46,7 @@
 	<script src="../../js/jquery-weui.min.js"></script>
 	<script src="../../js/utils/store.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/publicProtocol.js"></script>
+	<script src='../../js/md5.js'></script>
 	<script type="text/javascript">
 		mui.init({
 			statusBarBackground: '#63BBFF'
@@ -103,7 +105,7 @@
 			//判断输入是否符合要求 
 			if(checkInput(tempName)) {
 				if(checkInput(tempPW)) {
-					loginPro(tempName, tempPW);
+					getEncryptKeyLogin(tempName, tempPW);
 				} else {
 
 				}
@@ -112,79 +114,117 @@
 			}
 		});
 
-		//登录协议
-		var loginPro = function(tempName, tempPW) {
-
+		//获取秘钥
+		var getEncryptKeyLogin = function(tempName, tempPW) {
 			//握手
 			var enData0 = {};
 			//不需要加密的数据
 			var comData0 = {
-				uuid: tempModel.uuid, //用户设备号
-				shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-				appid: tempModel.appid //系统所分配的应用ID
+				platform_code: window.storageKeyName.PLATFORMCODE //平台代码
 			};
 			$.showLoading();
 			//发送网络请求，data为网络返回值
-			postDataEncry('ShakeHand', enData0, comData0, 0, function(data) {
-				console.log('2121212');
-				if(data.RspCode == 0) {
-					//							window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
-					store.set(window.storageKeyName.SHAKEHAND, data.RspData);
-					var enData1 = {
-						uid: tempName, //用户账号
-						pw: tempPW //用户密码
-					};
-					//不需要加密的数据
-					var comData1 = {
-						uuid: tempModel.uuid, //用户设备号
-						shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-						appid: tempModel.appid, //系统所分配的应用ID
-						schid: storageKeyName.SCHOOLID, //学校ID
-						utp: storageKeyName.USERTYPE //用户类型，0老师,1家长,2学生
-					};
-					//登录
-					postDataEncry('Login', enData1, comData1, 0, function(data1) {
-						$.hideLoading();
-						if(data1.RspCode == 0) {
-							loginFlag = 1;
-							if(data1.RspData.dpts == null) {
-								data1.RspData.dpts = [];
-							}
-							if(data1.RspData.grds == null) {
-								data1.RspData.grds = [];
-							}
-							if(data1.RspData.clss == null) {
-								data1.RspData.clss = [];
-							}
-							if(data1.RspData.subs == null) {
-								data1.RspData.subs = [];
-							}
-
-							if(data1.RspData.urolestr == null) {
-								data1.RspData.urolestr = '00000000000000000000000000000';
-							}
-							data1.RspData.userName0 = tempName;
-							data1.RspData.passWord0 = tempPW;
-							store.set(window.storageKeyName.PERSONALINFO, data1.RspData);
-							if(tempPW == '123456') {
-								var tempModel = {
-									flag: 1 //0是主动修改密码，1是判断是默认密码，自动让修改
-								}
-								utils.mOpenWithData("../../html/mine/modifyPassword.html", tempModel);
-							} else {
-								utils.hrefSessionStorage('home.html', {});
-							}
-
-						} else {
-							mui.toast(data1.RspTxt);
-						}
-					});
+			postDataEncry(0, 'api/login/getEncryptKey', enData0, comData0, 0, function(data) {
+				console.log('2121212data:' + JSON.stringify(data));
+				if(data.code == 0) {
+					store.set(window.storageKeyName.SHAKEHAND, data.data.encryptKey);
+					loginPro(tempName, tempPW, data.data.encryptKey);
 				} else {
 					$.hideLoading();
-					mui.toast(data.RspTxt);
+					mui.toast(data.msg);
 				}
 			});
 
+		}
+
+		//登录
+		var loginPro = function(tempName, tempPW, key) {
+			var enData1 = {};
+			//不需要加密的数据
+			var comData1 = {
+				password: hex_md5(key + tempPW), //秘钥+密码再MD5加密
+				platform_code: window.storageKeyName.PLATFORMCODE, //平台代码
+				app_code: window.storageKeyName.APPCODE, //应用系统代码
+				login_name: tempName //登录名
+			};
+			//登录
+			postDataEncry(0, 'api/login', enData1, comData1, 0, function(data1) {
+				console.log('data1:' + JSON.stringify(data1));
+				$.hideLoading();
+				if(data1.code == 0) {
+					loginFlag = 1;
+					data1.data.userName0 = tempName;
+					data1.data.passWord0 = tempPW;
+					store.set(window.storageKeyName.PERSONALINFO, data1.data);
+					var tempFlag = 0;
+					//获取权限
+					var enData2 = {};
+					//不需要加密的数据
+					var comData2 = {
+						access_token: data1.data.access_token, //用户令牌
+						platform_code: window.storageKeyName.PLATFORMCODE, //平台代码
+						app_code: window.storageKeyName.APPCODE //应用系统代码
+					};
+					//获取权限
+					postDataEncry(0, 'api/user/roleAcl', enData2, comData2, 0, function(data2) {
+						console.log('data2:' + JSON.stringify(data2));
+						$.hideLoading();
+						if(data2.code == 'SUCCESS') {
+							var tempPerInfo = store.get(window.storageKeyName.PERSONALINFO);
+							//合并对象
+							var tempData = $.extend(tempPerInfo, data2.data);
+							store.set(window.storageKeyName.PERSONALINFO, tempData);
+							tempFlag++;
+							console.log('tempFlag00:'+tempFlag);
+							if(tempFlag == 2) {
+								//跳转界面
+								gotoPage(tempPW);
+							}
+						} else {
+							mui.toast(data2.msg);
+						}
+					});
+					//登录用户岗位信息
+					//不需要加密的数据
+					var comData3 = {
+						access_token: data1.data.access_token //用户令牌
+					};
+					//登录用户岗位信息
+					postDataEncry(1, 'user/userInfo', {}, comData3, 0, function(data3) {
+						console.log('data3:' + JSON.stringify(data3));
+						$.hideLoading();
+						if(data3.code == 'SUCCESS') {
+							var tempPerInfo = store.get(window.storageKeyName.PERSONALINFO);
+							//合并对象
+							var tempData = $.extend(tempPerInfo, data3.data);
+							store.set(window.storageKeyName.PERSONALINFO, tempData);
+							tempFlag++;
+							console.log('tempFlag01:'+tempFlag);
+							if(tempFlag == 2) {
+								//跳转界面
+								gotoPage(tempPW);
+							}
+						} else {
+							mui.toast(data3.msg);
+						}
+					});
+				} else {
+					mui.toast(data1.msg);
+				}
+			});
+		}
+
+		//跳转界面
+		var gotoPage = function(tempPW) {
+			console.log('11111');
+			if(tempPW == '123456') {
+				var tempModel = {
+					flag: 1 //0是主动修改密码，1是判断是默认密码，自动让修改
+				}
+				utils.mOpenWithData("../../html/mine/modifyPassword.html", tempModel);
+			} else {
+				utils.hrefSessionStorage('home.html', {});
+			}
 		}
 
 		//从ios原生得到信息
@@ -195,14 +235,14 @@
 			//判断上次是否登录过，自动登录
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			if(personal) {
-				if(personal.utid == 'undefined' || personal.utid == null || personal.userName0 == null) {
+				if(personal.user.id == 'undefined' || personal.user.id == null || personal.userName0 == null) {
 
 				} else {
 					if(personal.userName0) {
 						document.getElementById("account").value = personal.userName0;
 						document.getElementById("password").value = personal.passWord0;
 						//login登录
-						loginPro(personal.userName0, personal.passWord0);
+						loginPro(personal.userName0, personal.passWord0, store.get(window.storageKeyName.SHAKEHAND));
 					} else {
 
 					}
@@ -210,18 +250,6 @@
 			} else {
 
 			}
-
-			//			console.log('personal:' + JSON.parse(personal));
-			//			if(personal.utid == 'undefined' || personal.utid == null) {
-			//
-			//			} else {
-			//				if(personal.userName0) {
-			//					document.getElementById("account").value = personal.userName0;
-			//					document.getElementById("password").value = personal.passWord0;
-			//					console.log('you name');
-			//					loginPro(personal.userName0, personal.passWord0);
-			//				}
-			//			}
 		}
 
 		//判断是否输入了值
