--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -121,7 +121,7 @@
 					events.showWaiting();
 					if(personal.utp == 0) { //0老师，1学生，2家长
 						//发送网络请求，data为网络返回值
-						postDataEncry('UpTecInfo', enData0, comData0, 0, function(data) {
+						postDataEncry(0,'UpTecInfo', enData0, comData0, 0, function(data) {
 							console.log('UpTecInfo:' + JSON.stringify(data));
 							events.closeWaiting();
 							if(data.RspCode == 0) {
@@ -144,7 +144,7 @@
 						});
 					} else {
 						//发送网络请求，data为网络返回值
-						postDataEncry('UpUserInfo', enData0, comData0, 0, function(data) {
+						postDataEncry(0,'UpUserInfo', enData0, comData0, 0, function(data) {
 							console.log('UpUserInfo:' + JSON.stringify(data));
 							events.closeWaiting();
 							if(data.RspCode == 0) {
